Tidy linter docs slightly and remove preview language

--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -24,7 +24,7 @@ GraphOS can perform the following types of schema checks:
 
 - [**Operation checks.**](#operation-checks) Compare your proposed schema changes against historical operations to verify whether the changes will break any of your graph's active clients.
 
-- [**Linting checks.**](./schema-linter/) Analyze your proposed schema changes for violations of formatting rules and other GraphQL best practices.
+- [**Linter checks.**](./schema-linter/) Analyze your proposed schema changes for violations of formatting rules and other GraphQL best practices.
 
 - **[Contract checks](./contracts/)** (enterprise only). When running schema checks on a source variant, also check whether your proposed schema changes will break any downstream contract variants.
 
@@ -33,7 +33,7 @@ GraphOS can perform the following types of schema checks:
 **Most of this article covers composition and operation checks.**
 
 - For details on contract checks, see [Contracts](./contracts/).
-- For details on linting checks, see [Schema linting](./schema-linter/).
+- For details on linter checks, see [Schema linting](./schema-linter/).
 
 </blockquote>
 
