Break out Explorer subscriptions into separate article

--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -57,10 +57,11 @@ This architecture helps you satisfy sophisticated requirements around data compl
 
 [The Apollo Router](/router/) supports a collection of features specific to GraphOS Enterprise organizations. These include:
 
-- Authentication of inbound requests via [JSON Web Token (JWT)](/router/configuration/authn-jwt/)
-- Redis-backed [distributed caching of query plans and persisted queries](/router/configuration/distributed-caching/)
-- Custom request handling in any language via [external coprocessing](/router/customizations/coprocessor/)
-- Mitigation of potentially malicious requests via [operation limits](/router/configuration/operation-limits)
+- **Real-time updates** via [GraphQL subscriptions](/router/executing-operations/subscription-support/)
+- **Authentication of inbound requests** via [JSON Web Token (JWT)](/router/configuration/authn-jwt/)
+- Redis-backed [**distributed caching** of query plans and persisted queries](/router/configuration/distributed-caching/)
+- **Custom request handling** in any language via [external coprocessing](/router/customizations/coprocessor/)
+- **Mitigation of potentially malicious requests** via [operation limits](/router/configuration/operation-limits)
 
 > [Learn more about Enterprise features in the Apollo Router.](/router/enterprise-features/)
 
