--- a/src/content/graphos/explorer/index.mdx
+++ b/src/content/graphos/explorer/index.mdx
@@ -1,13 +1,13 @@
 ---
-title: The Apollo Studio Explorer
+title: The GraphOS Studio Explorer
 description: Overview
 ---
 
-The Apollo Studio Explorer is a powerful web IDE for creating, running, and managing GraphQL operations:
+The GraphOS Studio Explorer is a powerful web IDE for creating, running, and managing GraphQL operations:
 
 <YouTube youTubeId="j8b0Bda_TIw" />
 
-The Explorer is free for all GraphOS organizations. It supports all GraphQL operation types (`Query`, `Mutation`, and [`Subscription`](./additional-features/#subscription-support)).
+The Explorer is free for all GraphOS organizations. It supports all GraphQL operation types (`Query`, `Mutation`, and [`Subscription`](./subscriptions-explorer/)).
 
 ## Setup
 
