--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -2,7 +2,7 @@
 title: Embedding the Explorer
 ---
 
-You can embed the [Apollo Studio Explorer](./) in a webpage that you can then provide to your graph's consumers. This enables those consumers to test out operations from your own website.
+You can embed the [GraphOS Studio Explorer](./) in a webpage that you can then provide to your graph's consumers. This enables those consumers to test out operations from your own website.
 
 For example, here's an embedded Explorer for an Apollo example graph. Try it out!
 
@@ -37,9 +37,7 @@ For more information, see the [landing page plugin API reference](/apollo-server
 
 ## Embedding on an arbitrary webpage
 
-1. <a href="https://studio.apollographql.com/" target="_blank">
-     Go to Apollo Studio
-   </a> and open the variant you want to use with the embedded Explorer.
+1. [Open GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content) and select the graph variant you want to use with the embedded Explorer.
 
 2. Go to the variant's Explorer page.
 
