--- a/src/content/graphos/explorer/index.mdx
+++ b/src/content/graphos/explorer/index.mdx
@@ -9,6 +9,8 @@ The GraphOS Studio Explorer is a powerful web IDE for creating, running, and man
 
 The Explorer is free for all GraphOS organizations. It supports all GraphQL operation types (`Query`, `Mutation`, and [`Subscription`](./subscriptions-explorer/)).
 
+> The Explorer is also available in a [sandbox mode](./sandbox/) that doesn't require an Apollo account.
+
 ## Setup
 
 To get started with the Explorer, [create a graph](../quickstart/cloud/#2-create-your-first-supergraph) in Apollo Studio and then navigate to that graph's Explorer page:
@@ -18,8 +20,6 @@ To get started with the Explorer, [create a graph](../quickstart/cloud/#2-create
   className="screenshot"
   alt="The default Explorer view for a new supergraph"
 />
-
-> The Explorer also provides a [sandbox mode](./sandbox/) that doesn't require an Apollo account.
 
 ## Building a query
 
