--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -3,7 +3,7 @@ title: Operation collections in the Explorer
 description: Save and share frequently used GraphQL operations
 ---
 
-You can create **operation collections** in the Apollo Studio Explorer, enabling you to save, organize, and share your organization's frequently used GraphQL operations:
+You can create **operation collections** in the GraphOS Studio Explorer, enabling you to save, organize, and share your organization's frequently used GraphQL operations:
 
 <img
   src="../img/operation-collections/list-collections.jpg"
