--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -11,7 +11,7 @@ In addition, you can configure your subgraphs to include [resolver-level traces]
 
 ## Viewing metrics
 
-You can visualize operation metrics in Apollo Studio, from any variant's **Operations** page:
+You can visualize operation metrics in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content), from any variant's **Operations** page:
 
 <img
   src="../img/studio-metrics.jpg"
@@ -29,7 +29,7 @@ The page displays _overall_ values for these metrics, along with values broken d
 
 ## Resolver-level traces
 
-If you [enable trace reporting](#enabling-traces) in your subgraphs, Apollo Studio can also display resolver-level trace information about each operation:
+If you [enable trace reporting](#enabling-traces) in your subgraphs, GraphOS Studio can also display resolver-level trace information about each operation:
 
 <img
   src="../img/traces-tab.jpg"
