--- a/src/content/graphos/org/index.mdx
+++ b/src/content/graphos/org/index.mdx
@@ -10,7 +10,7 @@ All data in GraphOS (graphs, schemas, metrics, etc.) is associated with a partic
 
 You create your first organization as part of the [account creation process](../quickstart/cloud/), unless you've been invited to an existing organization by another Apollo user.
 
-You can create additional organizations by clicking **Create a new organization** at the bottom of your organization dropdown in [Apollo Studio](https://studio.apollographql.com):
+You can create additional organizations by clicking **Create a new organization** at the bottom of your organization dropdown in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content):
 
 <img
   src="../img/organization-list.jpg"
@@ -23,7 +23,7 @@ A single organization can include any number of [graphs](../graphs/), so a singl
 
 ## Viewing your organizations
 
-Click the organization dropdown at the top of the page in [Apollo Studio](https://studio.apollographql.com) to view the list of all organizations you belong to:
+Click the organization dropdown at the top of the page in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) to view the list of all organizations you belong to:
 
 <img
   src="../img/organization-list.jpg"
