--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -2,7 +2,7 @@
 title: Managing organization members
 ---
 
-A GraphOS organization can have any number of members, and each member can be assigned a **role** that defines their capabilities within the organization.
+A GraphOS [organization](./) can have any number of members, and each member can be assigned a **role** that defines their capabilities within the organization.
 
 ## Organization-wide member roles
 
