First pass on subscriptions-for-cloud docs

--- a/src/content/graphos/basics/routing/cloud-configuration.mdx
+++ b/src/content/graphos/basics/routing/cloud-configuration.mdx
@@ -361,3 +361,7 @@ By default, your cloud supergraph does not resolve introspection queries. You ca
 supergraph:
   introspection: true
 ```
+
+### GraphQL subscription support
+
+See [this article](../operations/subscriptions/#cloud-router-setup).
