--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -5,7 +5,7 @@ description: Real-time data delivery from across your services
 
 <blockquote>
 
-**GraphQL subscription support for cloud supergraphs is currently in [preview](/resources/product-launch-stages#preview).** It does not currently support all popular WebSocket subprotocols. [See prerequisites.](#prerequisites)
+**Cloud supergraph support for GraphQL subscriptions is currently in [preview](/resources/product-launch-stages#preview).** [See prerequisites.](#prerequisites)
 
 You can also use subscriptions with an Enterprise self-hosed supergraph. See the [Apollo Router documentation](/router/executing-operation/subscription-support/).
 
@@ -22,7 +22,7 @@ subscription OnStockPricesChanged {
 }
 ```
 
-With subscription support enabled, you can add `Subscription` fields to the schema of any subgraph that supports the [`subscriptions-transport-ws` library](https://github.com/apollographql/subscriptions-transport-ws)'s subscription protocol:
+With a cloud supergraph, you can add `Subscription` fields to the schema of any subgraph that supports the [`graphql-transport-ws` WebSocket protocol](https://github.com/enisdenjo/graphql-ws):
 
 ```graphql title="stocks.graphql"
 type Subscription {
@@ -84,7 +84,7 @@ flowchart LR;
 
 2. When your cloud router receives a subscription, it executes that _same_ subscription against whichever subgraph defines the requested field (`stockPricesChanged` in the example above).
 
-   - This communication _does_ use [a WebSocket subprotocol](#subscription-modes) for compatibility with most subgraph libraries.
+   - This communication _does_ use a WebSocket subprotocol (specifically, [`graphql-transport-ws`](https://github.com/enisdenjo/graphql-ws)).
 
 3. The subgraph periodically sends new data to your router. Whenever it does, the router returns that data to the client in an additional HTTP response part.
    - A subscription can include federated entity fields that are defined in _other_ subgraphs. If it does, the router _first_ fetches those fields by querying the corresponding subgraphs (such as **Portfolios** in the diagram above). These queries use HTTP as usual.
@@ -93,7 +93,7 @@ flowchart LR;
 
 ## Prerequisites
 
-⚠️ **Before you add `Subscription` fields to your subgraphs,** do _all_ of the following _in the order shown_ to prevent schema composition errors:
+⚠️ **Before you add `Subscription` fields to your subgraphs,** do _all_ of the following _in the order shown_ to prevent errors:
 
 1. [Update your supergraph's build pipeline](../graphs/updating#2-update-your-build-pipeline) to use Apollo Federation 2.4 or later.
     - Previous versions of Apollo Federation don't support subscription operations.
@@ -110,11 +110,11 @@ flowchart LR;
 
     - You can _skip_ modifying subgraph schemas that don't define any `Subscription` fields.
 
-3. In each subgraph with subscriptions, make sure the subgraph hosts its subscriptions WebSocket endpoint at the path `/ws`.
+3. In each subgraph with subscriptions, make sure the subgraph uses the [`graphql-transport-ws`](https://github.com/enisdenjo/graphql-ws) WebSocket protocol for subscriptions.
 
-    - If your WebSocket endpoint is currently hosted at another path, you can add `/ws` as an _additional_ path instead of removing the existing path. This is helpful if legacy clients will temporarily continue executing operations on your subgraph directly.
+4. In each subgraph with subscriptions, make sure the subgraph hosts its subscriptions WebSocket endpoint at the path `/ws`.
 
-4. In each subgraph with subscriptions, make sure the subgraph uses the WebSocket protocol defined by the [`subscriptions-transport-ws` library](https://github.com/apollographql/subscriptions-transport-ws).
+    - If your WebSocket endpoint is currently hosted at a different path, you can add `/ws` as an _additional_ path instead of removing the original path. This is helpful if legacy clients will continue executing subscriptions on your subgraph directly using the original path.
 
 5. Deploy your updated subgraphs.
 
