--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -5,9 +5,9 @@ description: Real-time data delivery from across your services
 
 <blockquote>
 
-**Cloud supergraph support for GraphQL subscriptions is currently in [preview](/resources/product-launch-stages#preview).** [See prerequisites.](#prerequisites)
+**Cloud supergraph support for GraphQL subscriptions is currently in [preview](/resources/product-launch-stages#preview).**
 
-You can also use subscriptions with an Enterprise self-hosed supergraph. See the [Apollo Router documentation](/router/executing-operation/subscription-support/).
+You can also use subscriptions with an Enterprise self-hosted supergraph. See the [Apollo Router documentation](/router/executing-operation/subscription-support/).
 
 </blockquote>
 
@@ -22,13 +22,15 @@ subscription OnStockPricesChanged {
 }
 ```
 
-With a cloud supergraph, you can add `Subscription` fields to the schema of any subgraph that supports the [`graphql-transport-ws` WebSocket protocol](https://github.com/enisdenjo/graphql-ws):
+With a cloud supergraph, you can add `Subscription` fields to the schema of any subgraph that supports the [`graphql-transport-ws` WebSocket protocol](https://github.com/enisdenjo/graphql-ws/blob/master/PROTOCOL.md):
 
 ```graphql title="stocks.graphql"
 type Subscription {
   stockPricesChanged: [Stock!]!
 }
 ```
+
+Clients can then execute subscriptions on your cloud router, which executes them on your subgraphs.
 
 > ⚠️ **Important:** To use subscriptions with your cloud supergraph, you must first complete certain [prerequisites](#prerequisites).
 
@@ -84,7 +86,7 @@ flowchart LR;
 
 2. When your cloud router receives a subscription, it executes that _same_ subscription against whichever subgraph defines the requested field (`stockPricesChanged` in the example above).
 
-   - This communication _does_ use a WebSocket subprotocol (specifically, [`graphql-transport-ws`](https://github.com/enisdenjo/graphql-ws)).
+   - This communication _does_ use a WebSocket subprotocol (specifically, [`graphql-transport-ws`](https://github.com/enisdenjo/graphql-ws/blob/master/PROTOCOL.md)).
 
 3. The subgraph periodically sends new data to your router. Whenever it does, the router returns that data to the client in an additional HTTP response part.
    - A subscription can include federated entity fields that are defined in _other_ subgraphs. If it does, the router _first_ fetches those fields by querying the corresponding subgraphs (such as **Portfolios** in the diagram above). These queries use HTTP as usual.
@@ -95,9 +97,11 @@ flowchart LR;
 
 ⚠️ **Before you add `Subscription` fields to your subgraphs,** do _all_ of the following _in the order shown_ to prevent errors:
 
-1. [Update your supergraph's build pipeline](../graphs/updating#2-update-your-build-pipeline) to use Apollo Federation 2.4 or later.
+1. Make sure you've [created a cloud supergraph](../quickstart/cloud) and connected your GraphQL API to it!
+
+2. [Update your supergraph's build pipeline](../graphs/updating#2-update-your-build-pipeline) to use Apollo Federation 2.4 or later.
     - Previous versions of Apollo Federation don't support subscription operations.
-2. If your subgraph schemas specify an Apollo Federation version, modify them to use Apollo Federation 2.4 or later:
+3. If your subgraph schemas specify an Apollo Federation version, modify them to use Apollo Federation 2.4 or later:
     ```graphql title="stocks.graphql"
     extend schema
     @link(url: "https://specs.apollo.dev/federation/v2.4", #highlight-line
@@ -110,13 +114,13 @@ flowchart LR;
 
     - You can _skip_ modifying subgraph schemas that don't define any `Subscription` fields.
 
-3. In each subgraph with subscriptions, make sure the subgraph uses the [`graphql-transport-ws`](https://github.com/enisdenjo/graphql-ws) WebSocket protocol for subscriptions.
+4. In each subgraph with subscriptions, make sure the subgraph uses the [`graphql-transport-ws`](https://github.com/enisdenjo/graphql-ws/blob/master/PROTOCOL.md) WebSocket protocol for subscriptions.
 
-4. In each subgraph with subscriptions, make sure the subgraph hosts its subscriptions WebSocket endpoint at the path `/ws`.
+5. In each subgraph with subscriptions, make sure the subgraph hosts its subscriptions WebSocket endpoint at the path `/ws`.
 
     - If your WebSocket endpoint is currently hosted at a different path, you can add `/ws` as an _additional_ path instead of removing the original path. This is helpful if legacy clients will continue executing subscriptions on your subgraph directly using the original path.
 
-5. Deploy your updated subgraphs.
+6. Deploy your updated subgraphs.
 
 After you complete these prerequisites, you begin [executing subscriptions](#example-execution) on your cloud router.
 
@@ -248,4 +252,4 @@ content-type: application/json
 
 > This example subscription only emits three events and then directly closes the connection.
 >
-> For more information on this multipart HTTP subscription protocol, see [this article](./subscription-multipart-protocol/).
+> For more information on this multipart HTTP subscription protocol, see [this article](/router/executing-operations/subscription-multipart-protocol/).
